<resources>
    <string name="app_name">KotlinDaggerExperiement</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="id">Id</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="add">Add</string>
    <string name="comic">Comic</string>
    <string name="previous_comic">Previous</string>
    <string name="action_manager_coming_soon">Coming Soon</string>
    <string name="action_manager_email_chooser_title">Email Apps</string>
    <string name="action_manager_email_failed">Email creation failed</string>
    <string name="environment_manager_choose_environment_title">Choose environment</string>
    <string name="auth_factory_fingerprint_decryption_failed">Fingerprint not recognized</string>
    <string name="comic_loading">Loading...</string>
    <string name="comic_error">Error!</string>
    <string name="next_comic">Next</string>
</resources>
